[package]
name = "tasker"
version = "0.1.0"
authors = ["Pete Taylor <pete.jc.taylor@hey.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.9.0", features = ["attributes", "tokio1"] }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sqlx = { version = "0.4.2", features = ["runtime-async-std-rustls", "offline", "macros", "chrono", "json", "postgres", "uuid", "decimal"] }
dotenv = "0.15"
uuid = { version = "0.8", features = ["v4", "serde"] }
surf = { version = "2.1.0" }
redis = { version = "0.20.1", features = ["aio", "async-std-comp"] }
log = "0.4"
rust-crypto = "0.2.36"
jsonwebtoken = "7"
chrono = { version = "0.4", features = [ "serde" ] }
fs_extra = "1.2.0"
toml = "~0.4"
clap = {version = "2.33", features = ["yaml"]}
async-trait = { version = "0.1.7" }
anyhow = { version = "~1.0"}
rsmq_async = { version = "5.1.2" }

[dev-dependencies]
assert-json-diff = "2.0.0"
lazy_static = "1.4.0"
